# Kinesis-data-stream-system

./: README.md  __backend.tf  __providers.tf  __versions.tf  main.tf
src/py/lambda_functions/: Makefile  README.md  pyproject.toml
src/py/lambda_functions/processor_lambda/: process_records.py
src/py/lambda_functions/tests/: conftest.py  test_process_record.py
src/py/lambda_functions/tests/fixtures/: process_record.py
src/tf/: cloudwatch_log.tf  firehose.tf  glue.tf  iam.tf  lambda.tf  s3.tf  variables.tf
